# kpbj.fm

./: .gitignore  .sops.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CNAME  Justfile  Makefile  PROVISIONING.md  README.md  cabal.project  docker-compose.yml  docker.nix  flake.nix  fly.staging.toml  fly.toml  index.html  kpbj-api.cabal  mock-data.sql  plan.md  tailwind.config.js  weeder.toml
backend/: kpbj-api.cabal
backend/app/: Main.hs
backend/keys/: cert.pem  keys.pfx  private.pem  public.pem
backend/migrations/: 20250921134255_create_user_metadata_table.sql  20250922021451_add_user_roles.sql  20250922025612_create_blog_tables.sql  20250927022359_create_shows_tables.sql  20250927022501_create_show_blogs_tables.sql
backend/src/: API.hs  API.hs-boot  App.hs  Auth.hs  Config.hs  Tracing.hs  Utils.hs
backend/src/API/: Get.hs  MailingList.hs  SplashPage.hs  User.hs
backend/src/API/About/: Get.hs
backend/src/API/Archive/Get/Templates/: Page.hs
backend/src/API/Blog/: Get.hs
backend/src/API/Blog/Edit/: Get.hs  Post.hs
backend/src/API/Blog/Get/Templates/: Error.hs  Page.hs  Pagination.hs  PostCard.hs
backend/src/API/Blog/New/: Get.hs  Post.hs
backend/src/API/Blog/Post/: Get.hs
backend/src/API/Donate/: Get.hs
backend/src/API/Donate/Get/: Templates.hs
backend/src/API/Episode/: Get.hs
backend/src/API/Episode/Edit/: Get.hs  Post.hs
backend/src/API/Episode/Get/Templates/: Page.hs
backend/src/API/Episodes/: Get.hs
backend/src/API/Episodes/Edit/: Get.hs  Post.hs
backend/src/API/Episodes/Get/Templates/: Page.hs
backend/src/API/Episodes/New/: Get.hs  Post.hs
backend/src/API/Episodes/Upload/: Get.hs  Post.hs
backend/src/API/Events/: Get.hs
backend/src/API/Events/Edit/: Get.hs  Post.hs
backend/src/API/Events/Event/: Get.hs
backend/src/API/Events/Get/Templates/: Controls.hs  List.hs  MonthView.hs  Page.hs  WeekView.hs
backend/src/API/Events/New/: Get.hs  Post.hs
backend/src/API/Host/Dashboard/: Get.hs
backend/src/API/Media/: Get.hs
backend/src/API/PrivacyPolicy/: Get.hs
backend/src/API/Show/: Get.hs
backend/src/API/Show/Edit/: Get.hs  Post.hs
backend/src/API/Show/Get/Templates/: Episode.hs  Page.hs  ShowHeader.hs  Sidebar.hs
backend/src/API/Shows/: Get.hs
backend/src/API/Shows/Get/Templates/: Page.hs  ShowCard.hs
backend/src/API/Shows/Slug/Blog/: Get.hs
backend/src/API/Shows/Slug/Edit/: Get.hs  Post.hs
backend/src/API/Static/: Get.hs
backend/src/API/TermsOfService/: Get.hs
backend/src/API/TermsOfService/Get/: Templates.hs
backend/src/API/User/: Current.hs  Login.hs  Register.hs
backend/src/API/User/Login/: Form.hs  Get.hs  Post.hs
backend/src/API/User/Logout/: Get.hs  Post.hs
backend/src/API/User/Register/: Form.hs  Get.hs  Post.hs
backend/src/App/: Common.hs
backend/src/Component/: Frame.hs  Table.hs
backend/src/Component/Form/: Builder.hs  Internal.hs  JSArrow.hs
backend/src/DB/: Utils.hs
backend/src/Database/: Class.hs  Utils.hs
backend/src/Database/Queries/: MailingList.hs  User.hs
backend/src/Database/Tables/: MailingList.hs  User.hs
backend/src/Domain/Types/: Cookie.hs  DisplayName.hs  Email.hs  Episode.hs  FileStorage.hs  FileUpload.hs  Genre.hs  PageNumber.hs  Password.hs  Show.hs  ShowBlog.hs  Slug.hs  User.hs
backend/src/Effects/: Auth.hs  FileUpload.hs  Logger.hs  MailingList.hs  User.hs
backend/src/Effects/Database/Tables/: Blog.hs  BlogPosts.hs  BlogTags.hs  Episode.hs  Episode.hs-boot  EpisodeTrack.hs  Episodes.hs  EventTags.hs  Events.hs  HostDetails.hs  Show.hs  Show.hs-boot  ShowBlog.hs  ShowBlogPosts.hs  ShowBlogTags.hs  ShowHost.hs  ShowSchedule.hs  Shows.hs  UserMetadata.hs
backend/src/Email/: Class.hs
backend/src/Handlers/: MailingList.hs  SplashPage.hs  User.hs
backend/src/Lucid/: Extras.hs
backend/test/Effects/Database/Tables/: EventsSpec.hs  UserMetadataSpec.hs
backend/test/Test/Database/: Setup.hs
jobs/audio-normalize/: Main.hs  audio-normalize.cabal
jobs/episode-check/: Main.hs  episode-check.cabal
jobs/ga-poller/: Main.hs  ga-poller.cabal
jobs/listener-snapshots/: Main.hs  listener-snapshots.cabal
jobs/mailchimp-reconcile/: Main.hs  mailchimp-reconcile.cabal
jobs/order-cleanup/: Main.hs  order-cleanup.cabal
jobs/sync-host-emails/: Database.hs  GoogleGroups.hs  Main.hs  sync-host-emails.cabal
jobs/sync-host-emails/src/: GoogleGroups.hs  Sync.hs
jobs/sync-host-emails/test/: SyncSpec.hs
jobs/token-cleanup/: Main.hs  token-cleanup.cabal
lib/easypost-http/: easypost-http.cabal
lib/easypost-http/src/EasyPost/: API.hs  Client.hs  Types.hs
lib/easypost-http/test/EasyPost/: IntegrationSpec.hs  TypesSpec.hs
lib/kpbj-database/: kpbj-database.cabal
lib/kpbj-database/src/Effects/Database/Tables/: BlogPosts.hs  BlogTags.hs  (+28 more)
lib/kpbj-database/src/OrphanInstances/: Rel8.hs
lib/kpbj-database/test/: Main.hs
lib/kpbj-database/test/Domain/Types/: CentsSpec.hs
lib/kpbj-database/test/Test/Database/: Helpers.hs  Monad.hs  Setup.hs
lib/kpbj-email/: kpbj-email.cabal
lib/kpbj-email/src/Effects/Email/: Config.hs  Send.hs
lib/kpbj-types/: kpbj-types.cabal
lib/kpbj-types/src/Domain/Icecast/: Status.hs
lib/kpbj-types/src/Domain/Types/: Cents.hs  FileStorage.hs  FileUpload.hs  Offset.hs  Origin.hs  Search.hs  ShowSortBy.hs  StorageBackend.hs  Timezone.hs  UserSortBy.hs  WeekOffset.hs
lib/kpbj-types/src/OrphanInstances/: TimeOfDay.hs
lib/lucid-form-builder/: lucid-form-builder.cabal
lib/lucid-htmx-alpine/: lucid-htmx-alpine.cabal
lib/lucid-htmx-alpine/src/Lucid/: HTMX.hs
lib/lucid-tailwind/: lucid-tailwind.cabal
lib/lucid-tailwind/src/Lucid/: Tailwind.hs
lib/mailchimp-http/: mailchimp-http.cabal
lib/mailchimp-http/src/Mailchimp/: API.hs  Client.hs  Config.hs  Types.hs  Webhook.hs
lib/mailchimp-http/src/Mailchimp/Servant/: FormBody.hs
lib/mailchimp-http/test/Mailchimp/: ConfigSpec.hs  WebhookSpec.hs
lib/stripe-http/: stripe-http.cabal
lib/stripe-http/src/Stripe/: API.hs  Client.hs  Types.hs  Webhook.hs
lib/stripe-http/src/Stripe/Servant/: RawBody.hs
lib/stripe-http/test/Stripe/: IntegrationSpec.hs  WebhookSpec.hs
(+1542 files in other folders)
