cabal-version:      3.0
name:               kpbj-api
version:            0.1.0.2
license:            Apache-2.0
license-file:       LICENSE_HASKELL
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      TypeApplications
      TypeOperators
      TypeSynonymInstances

--------------------------------------------------------------------------------

executable kpbj-api
  import:           common-extensions
  main-is:          Main.hs
  build-depends:    base
                  , kpbj-api
                  , web-server-core
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
                  , aeson
                  , base
                  , bytestring
                  , containers
                  , data-has
                  , deriving-aeson
                  , directory
                  , exceptions
                  , extra
                  , filepath
                  , hasql
                  , hasql-interpolate
                  , hasql-pool
                  , hasql-transaction
                  , hs-opentelemetry-sdk
                  , http-api-data
                  , http-conduit
                  , http-types
                  , log-base
                  , lucid2
                  , magic
                  , mtl
                  , network
                  , password
                  , random
                  , servant
                  , servant-multipart
                  , servant-server
                  , string-interpolate
                  , temporary
                  , text
                  , text-display
                  , time
                  , transformers
                  , unliftio-core
                  , validation
                  , vector
                  , wai-extra
                  , web-server-core
                  , witherable
                  , xss-sanitize
  exposed-modules:
    API
    API.About.Get
    API.About.Get.Templates
    API.Archive.Get
    API.Archive.Get.Templates.EpisodeCard
    API.Archive.Get.Templates.Page
    API.Archive.Get.Templates.SearchFilters
    API.Blog.Get
    API.Blog.Get.Templates.Page
    API.Blog.Get.Templates.Pagination
    API.Blog.Get.Templates.PostCard
    API.Blog.New.Get
    API.Blog.New.Get.Templates.Form
    API.Blog.New.Post
    API.Blog.Edit.Get
    API.Blog.Edit.Get.Templates.Form
    API.Blog.Edit.Post
    API.Blog.Delete
    API.Blog.Post.Get
    API.Blog.Post.Get.Templates.Page
    API.Donate.Get
    API.Donate.Get.Templates
    API.Events.Get
    API.Events.Get.Templates.Controls
    API.Events.Get.Templates.List
    API.Events.Get.Templates.MonthView
    API.Events.Get.Templates.Page
    API.Events.Get.Templates.WeekView
    API.Events.New.Get
    API.Events.New.Get.Templates.Auth
    API.Events.New.Get.Templates.Form
    API.Events.New.Post
    API.Events.Edit.Get
    API.Events.Edit.Get.Templates.Form
    API.Events.Edit.Post
    API.Events.Delete
    API.Events.Event.Get
    API.Events.Event.Get.Templates.Page
    API.Get
    API.Get.Templates
    API.Dashboard.Blogs.Get
    API.Dashboard.Blogs.Get.Templates.Page
    API.Dashboard.Blogs.Slug.Get
    API.Dashboard.Blogs.Slug.Get.Templates.Page
    API.Dashboard.Episodes.Slug.Edit.Get
    API.Dashboard.Episodes.Slug.Edit.Get.Templates.Form
    API.Dashboard.Episodes.Slug.Edit.Get.Templates.Scripts
    API.Dashboard.Episodes.Slug.Edit.Post
    API.Dashboard.Episodes.Slug.Get
    API.Dashboard.Episodes.Slug.Get.Templates.Page
    API.Dashboard.Episodes.Get
    API.Dashboard.Episodes.Get.Templates.Page
    API.Dashboard.Get
    API.Dashboard.Get.Templates.Auth
    API.Dashboard.Get.Templates.BlogPost
    API.Dashboard.Get.Templates.Episode
    API.Dashboard.Shows.Get
    API.Dashboard.Shows.Get.Templates.Page
    API.Dashboard.Shows.New.Get
    API.Dashboard.Shows.New.Get.Templates.Page
    API.Dashboard.Shows.New.Post
    API.Dashboard.Users.Get
    API.Dashboard.Users.Get.Templates.Page
    API.Dashboard.Users.Delete
    API.Dashboard.Users.Detail.Get
    API.Dashboard.Users.Detail.Get.Templates.Page
    API.Dashboard.Users.Edit.Get
    API.Dashboard.Users.Edit.Get.Templates.Page
    API.Dashboard.Users.Edit.Post
    API.Dashboard.Users.Role.Patch
    API.Dashboard.Users.Suspend.Post
    API.Dashboard.Users.Unsuspend.Post
    API.Media.Get
    API.PrivacyPolicy.Get
    API.PrivacyPolicy.Get.Templates
    API.Shows.Get
    API.Shows.Get.Templates.Page
    API.Shows.Get.Templates.Pagination
    API.Shows.Get.Templates.ScheduleView
    API.Shows.Get.Templates.ShowCard
    API.Shows.Schedule.Get
    API.Shows.Schedule.Get.Templates.Page
    API.Dashboard.Shows.Slug.Edit.Get
    API.Dashboard.Shows.Slug.Edit.Get.Templates.Form
    API.Dashboard.Shows.Slug.Edit.Post
    API.Dashboard.Shows.Slug.Get
    API.Dashboard.Shows.Slug.Get.Templates.Episode
    API.Dashboard.Shows.Slug.Get.Templates.Page
    API.Dashboard.Shows.Slug.Get.Templates.ShowHeader
    API.Shows.Slug.Episode.Get
    API.Shows.Slug.Episode.Get.Templates.Page
    API.Shows.Slug.Episode.Delete
    API.Shows.Slug.Episode.Delete.Templates.ErrorBanner
    API.Shows.Slug.Episode.DiscardDraft
    API.Shows.Slug.Episode.Publish.Post
    API.Shows.Slug.Episode.Publish.Post.Templates.Response
    API.Shows.Slug.Episode.New.Get
    API.Shows.Slug.Episode.New.Get.Templates.Form
    API.Shows.Slug.Episode.New.Post
    API.Shows.Slug.Get
    API.Shows.Slug.Get.Templates.Episode
    API.Shows.Slug.Get.Templates.Page
    API.Shows.Slug.Get.Templates.ShowHeader
    API.Shows.Slug.Blog.Delete
    API.Shows.Slug.Blog.Edit.Get
    API.Shows.Slug.Blog.Edit.Get.Templates.Page
    API.Shows.Slug.Blog.Edit.Post
    API.Shows.Slug.Blog.Get
    API.Shows.Slug.Blog.Get.Templates.Page
    API.Shows.Slug.Blog.Get.Templates.PostCard
    API.Shows.Slug.Blog.New.Get
    API.Shows.Slug.Blog.New.Get.Templates.Page
    API.Shows.Slug.Blog.New.Post
    API.Shows.Slug.Blog.Post.Get
    API.Shows.Slug.Blog.Post.Get.Templates.Page
    API.Static.Get
    API.TermsOfService.Get
    API.TermsOfService.Get.Templates
    API.User.Login.Get
    API.User.Login.Get.Templates.Form
    API.User.Login.Post
    API.User.Logout.Get
    API.User.Logout.Post
    API.User.Register.Get
    API.User.Register.Get.Templates.Form
    API.User.Register.Post
    App.Common
    Component.Banner
    Component.Form
    Component.Form.Builder
    Component.Form.Internal
    Component.Form.JSArrow
    Component.DashboardFrame
    Component.Frame
    Component.Redirect
    Component.Table
    Domain.Types.PostStatus
    Domain.Types.Cookie
    Domain.Types.FileStorage
    Domain.Types.FileUpload
    Domain.Types.Filter
    Domain.Types.Genre
    Domain.Types.HxRequest
    Domain.Types.Limit
    Domain.Types.Offset
    Domain.Types.PageNumber
    Domain.Types.PageView
    Domain.Types.Search
    Domain.Types.Slug
    Domain.Types.UserSortBy
    Domain.Types.WeekOffset
    Effects.Database.Tables.BlogPosts
    Effects.Database.Tables.BlogTags
    Effects.Database.Tables.Episodes
    Effects.Database.Tables.EpisodeTrack
    Effects.Database.Tables.Events
    Effects.Database.Tables.EventTags
    Effects.Database.Tables.Shows
    Effects.Database.Tables.ShowBlogPosts
    Effects.Database.Tables.ShowBlogTags
    Effects.Database.Tables.ShowHost
    Effects.Database.Tables.ShowSchedule
    Effects.Database.Tables.UserMetadata
    Effects.ContentSanitization
    Effects.FileUpload
    Effects.MimeTypeValidation
    Lucid.Extras
    OrphanInstances.DayOfWeek
    OrphanInstances.TimeOfDay
    Utils
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -Werror -Wno-missed-extra-shared-lib -fwrite-ide-info

--------------------------------------------------------------------------------

test-suite kpbj-api-test
    import:           common-extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O0
    build-depends:    base >=4.19.2.0
                    , kpbj-api
                    , web-server-core
                    , bytestring
                    , containers
                    , exceptions
                    , data-has
                    , hasql
                    , hasql-interpolate
                    , hasql-pool
                    , hasql-transaction
                    , hedgehog
                    , hs-opentelemetry-api
                    , hs-opentelemetry-sdk
                    , hspec
                    , hspec-api
                    , hspec-core
                    , hspec-discover
                    , hspec-expectations
                    , hspec-hedgehog
                    , HUnit
                    , iproute
                    , log-base
                    , mtl
                    , password
                    , postgres-options
                    , string-interpolate
                    , text
                    , time
                    , tmp-postgres
                    , typed-process
                    , unliftio-core
                    , uuid
                    , vector
    other-modules:
       Domain.Types.FileUploadSpec
       Domain.Types.SlugSpec
       Effects.ContentSanitizationSpec
       Effects.Database.Tables.BlogPostsSpec
       Effects.Database.Tables.EpisodesSpec
       Effects.Database.Tables.EventsSpec
       Effects.Database.Tables.ShowHostSpec
       Effects.Database.Tables.ShowScheduleSpec
       Effects.Database.Tables.ShowsSpec
       Effects.Database.Tables.UserMetadataSpec
       Effects.Database.Tables.UserRoleSpec
       Effects.MimeTypeValidationSpec
       Test.Database.Expectation
       Test.Database.Monad
       Test.Database.Property
       Test.Database.Property.Assert
       Test.Database.Setup
       Test.Gen.DomainTypes
       Test.Gen.EmailAddress
       Test.Gen.Password
       Test.Gen.Tables.BlogPosts
       Test.Gen.Tables.Episodes
       Test.Gen.Tables.Events
       Test.Gen.Tables.Shows
       Test.Gen.Tables.ShowHost
       Test.Gen.Tables.ShowSchedule
       Test.Gen.Tables.User
       Test.Gen.Tables.UserMetadata
       Test.Gen.Text
       Test.Gen.Time
