cabal-version:      3.0
name:               kpbj-api
version:            0.1.0.2
license:            Apache-2.0
license-file:       LICENSE_HASKELL
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      TypeApplications
      TypeOperators
      TypeSynonymInstances

--------------------------------------------------------------------------------

executable kpbj-api
  import:           common-extensions
  main-is:          Main.hs
  build-depends:    base
                  , kpbj-api
                  , web-server-core
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
                  , aeson
                  , base
                  , bytestring
                  , containers
                  , data-has
                  , deriving-aeson
                  , directory
                  , exceptions
                  , extra
                  , filepath
                  , hasql
                  , hasql-interpolate
                  , hasql-pool
                  , hasql-transaction
                  , rel8
                  , hs-opentelemetry-sdk
                  , http-api-data
                  , http-conduit
                  , http-types
                  , lens
                  , log-base
                  , lucid2
                  , magic
                  , mtl
                  , network
                  , pandoc
                  , pandoc-types
                  , password
                  , random
                  , servant
                  , servant-multipart
                  , servant-server
                  , string-interpolate
                  , temporary
                  , text
                  , text-display
                  , time
                  , transformers
                  , unliftio-core
                  , validation
                  , vector
                  , wai-extra
                  , web-server-core
                  , witherable
                  , xmlhtml
                  , xmlhtml-lens
                  , xss-sanitize
  exposed-modules:
    API
    API.Links
    API.About.Get.Handler
    API.About.Get.Route
    API.About.Get.Templates
    API.Blog.Get.Handler
    API.Blog.Get.Route
    API.Blog.Get.Templates.Page
    API.Blog.Get.Templates.Pagination
    API.Blog.Post.Get.Handler
    API.Blog.Post.Get.Route
    API.Blog.Post.Get.Templates.Page
    API.Donate.Get.Handler
    API.Donate.Get.Route
    API.Donate.Get.Templates
    API.Events.Get.Handler
    API.Events.Get.Route
    API.Events.Get.Templates.Page
    API.Events.Event.Get.Handler
    API.Events.Event.Get.Route
    API.Events.Event.Get.Templates.Page
    API.Get.Handler
    API.Get.Route
    API.Get.Templates
    API.Dashboard.Blogs.Get.Handler
    API.Dashboard.Blogs.Get.Route
    API.Dashboard.Blogs.Get.Templates.Page
    API.Dashboard.Blogs.Slug.Get.Handler
    API.Dashboard.Blogs.Slug.Get.Route
    API.Dashboard.Blogs.Slug.Get.Templates.Page
    API.Dashboard.Events.Get.Handler
    API.Dashboard.Events.Get.Route
    API.Dashboard.Events.Get.Templates.Page
    API.Dashboard.Events.New.Get.Handler
    API.Dashboard.Events.New.Get.Route
    API.Dashboard.Events.New.Get.Templates.Form
    API.Dashboard.Events.New.Post.Handler
    API.Dashboard.Events.New.Post.Route
    API.Dashboard.Events.Slug.Delete.Handler
    API.Dashboard.Events.Slug.Delete.Route
    API.Dashboard.Events.Slug.Edit.Get.Handler
    API.Dashboard.Events.Slug.Edit.Get.Route
    API.Dashboard.Events.Slug.Edit.Get.Templates.Form
    API.Dashboard.Events.Slug.Edit.Post.Handler
    API.Dashboard.Events.Slug.Edit.Post.Route
    API.Dashboard.Events.Slug.Get.Handler
    API.Dashboard.Events.Slug.Get.Route
    API.Dashboard.Events.Slug.Get.Templates.Page
    API.Dashboard.StationBlog.Get.Handler
    API.Dashboard.StationBlog.Get.Route
    API.Dashboard.StationBlog.Get.Templates.Page
    API.Dashboard.StationBlog.New.Get.Handler
    API.Dashboard.StationBlog.New.Get.Route
    API.Dashboard.StationBlog.New.Get.Templates.Form
    API.Dashboard.StationBlog.New.Post.Handler
    API.Dashboard.StationBlog.New.Post.Route
    API.Dashboard.StationBlog.Slug.Delete.Handler
    API.Dashboard.StationBlog.Slug.Delete.Route
    API.Dashboard.StationBlog.Slug.Edit.Get.Handler
    API.Dashboard.StationBlog.Slug.Edit.Get.Route
    API.Dashboard.StationBlog.Slug.Edit.Get.Templates.Form
    API.Dashboard.StationBlog.Slug.Edit.Post.Handler
    API.Dashboard.StationBlog.Slug.Edit.Post.Route
    API.Dashboard.StationBlog.Slug.Get.Handler
    API.Dashboard.StationBlog.Slug.Get.Route
    API.Dashboard.StationBlog.Slug.Get.Templates.Page
    API.Dashboard.Episodes.Slug.Edit.Get.Handler
    API.Dashboard.Episodes.Slug.Edit.Get.Route
    API.Dashboard.Episodes.Slug.Edit.Get.Templates.Form
    API.Dashboard.Episodes.Slug.Edit.Get.Templates.Scripts
    API.Dashboard.Episodes.Slug.Edit.Post.Handler
    API.Dashboard.Episodes.Slug.Edit.Post.Route
    API.Dashboard.Episodes.Slug.Get.Handler
    API.Dashboard.Episodes.Slug.Get.Route
    API.Dashboard.Episodes.Slug.Get.Templates.Page
    API.Dashboard.Episodes.Get.Handler
    API.Dashboard.Episodes.Get.Route
    API.Dashboard.Episodes.Get.Templates.Page
    API.Dashboard.Episodes.Redirect.Handler
    API.Dashboard.Episodes.Redirect.Route
    API.Dashboard.Get.Handler
    API.Dashboard.Get.Route
    API.Dashboard.Get.Templates.Auth
    API.Dashboard.Get.Templates.BlogPost
    API.Dashboard.Get.Templates.Episode
    API.Dashboard.Shows.Get.Handler
    API.Dashboard.Shows.Get.Route
    API.Dashboard.Shows.Get.Templates.Page
    API.Dashboard.Shows.New.Get.Handler
    API.Dashboard.Shows.New.Get.Route
    API.Dashboard.Shows.New.Get.Templates.Page
    API.Dashboard.Shows.New.Post.Handler
    API.Dashboard.Shows.New.Post.Route
    API.Dashboard.Users.Get.Handler
    API.Dashboard.Users.Get.Route
    API.Dashboard.Users.Get.Templates.Page
    API.Dashboard.Users.Delete.Handler
    API.Dashboard.Users.Delete.Route
    API.Dashboard.Users.Detail.Get.Handler
    API.Dashboard.Users.Detail.Get.Route
    API.Dashboard.Users.Detail.Get.Templates.Page
    API.Dashboard.Users.Edit.Get.Handler
    API.Dashboard.Users.Edit.Get.Route
    API.Dashboard.Users.Edit.Get.Templates.Page
    API.Dashboard.Users.Edit.Post.Handler
    API.Dashboard.Users.Edit.Post.Route
    API.Dashboard.Users.Role.Patch.Handler
    API.Dashboard.Users.Role.Patch.Route
    API.Dashboard.Users.Suspend.Post.Handler
    API.Dashboard.Users.Suspend.Post.Route
    API.Dashboard.Users.Unsuspend.Post.Handler
    API.Dashboard.Users.Unsuspend.Post.Route
    API.Media.Get.Handler
    API.Media.Get.Route
    API.PrivacyPolicy.Get.Handler
    API.PrivacyPolicy.Get.Route
    API.PrivacyPolicy.Get.Templates
    API.Schedule.Get.Handler
    API.Schedule.Get.Route
    API.Schedule.Get.Templates.Components
    API.Schedule.Get.Templates.Page
    API.Shows.Get.Handler
    API.Shows.Get.Route
    API.Shows.Get.Templates.Page
    API.Shows.Get.Templates.Pagination
    API.Dashboard.Shows.Slug.Edit.Get.Handler
    API.Dashboard.Shows.Slug.Edit.Get.Route
    API.Dashboard.Shows.Slug.Edit.Get.Templates.Form
    API.Dashboard.Shows.Slug.Edit.Post.Handler
    API.Dashboard.Shows.Slug.Edit.Post.Route
    API.Dashboard.Shows.Slug.Episode.New.Get.Handler
    API.Dashboard.Shows.Slug.Episode.New.Get.Route
    API.Dashboard.Shows.Slug.Episode.New.Get.Templates.Form
    API.Dashboard.Shows.Slug.Episode.New.Post.Handler
    API.Dashboard.Shows.Slug.Episode.New.Post.Route
    API.Dashboard.Shows.Slug.Get.Handler
    API.Dashboard.Shows.Slug.Get.Route
    API.Dashboard.Shows.Slug.Get.Templates.Episode
    API.Dashboard.Shows.Slug.Get.Templates.Page
    API.Dashboard.Shows.Slug.Get.Templates.ShowHeader
    API.Shows.Slug.Episode.Get.Handler
    API.Shows.Slug.Episode.Get.Route
    API.Shows.Slug.Episode.Get.Templates.Page
    API.Shows.Slug.Episode.Delete.Handler
    API.Shows.Slug.Episode.Delete.Route
    API.Shows.Slug.Episode.DiscardDraft.Handler
    API.Shows.Slug.Episode.DiscardDraft.Route
    API.Shows.Slug.Episode.Publish.Post.Handler
    API.Shows.Slug.Episode.Publish.Post.Route
    API.Shows.Slug.Get.Handler
    API.Shows.Slug.Get.Route
    API.Shows.Slug.Get.Templates.Page
    API.Shows.Slug.Get.Templates.ShowHeader
    API.Shows.Slug.Blog.Delete.Handler
    API.Shows.Slug.Blog.Delete.Route
    API.Shows.Slug.Blog.Edit.Get.Handler
    API.Shows.Slug.Blog.Edit.Get.Route
    API.Shows.Slug.Blog.Edit.Get.Templates.Page
    API.Shows.Slug.Blog.Edit.Post.Handler
    API.Shows.Slug.Blog.Edit.Post.Route
    API.Shows.Slug.Blog.Get.Handler
    API.Shows.Slug.Blog.Get.Route
    API.Shows.Slug.Blog.Get.Templates.Page
    API.Shows.Slug.Blog.New.Get.Handler
    API.Shows.Slug.Blog.New.Get.Route
    API.Shows.Slug.Blog.New.Get.Templates.Page
    API.Shows.Slug.Blog.New.Post.Handler
    API.Shows.Slug.Blog.New.Post.Route
    API.Shows.Slug.Blog.Post.Get.Handler
    API.Shows.Slug.Blog.Post.Get.Route
    API.Shows.Slug.Blog.Post.Get.Templates.Page
    API.Static.Get.Handler
    API.Static.Get.Route
    API.TermsOfService.Get.Handler
    API.TermsOfService.Get.Route
    API.TermsOfService.Get.Templates
    API.Types
    API.User.Login.Get.Handler
    API.User.Login.Get.Route
    API.User.Login.Get.Templates.Form
    API.User.Login.Post.Handler
    API.User.Login.Post.Route
    API.User.Logout.Get.Handler
    API.User.Logout.Get.Route
    API.User.Logout.Post.Handler
    API.User.Logout.Post.Route
    API.User.Register.Get.Handler
    API.User.Register.Get.Route
    API.User.Register.Get.Templates.Form
    API.User.Register.Post.Handler
    API.User.Register.Post.Route
    App.Common
    Component.ActionsDropdown
    Component.Banner
    Component.Card.BlogPost
    Component.Card.Episode
    Component.Card.Event
    Component.Card.Show
    Component.Form
    Component.Form.Builder
    Component.Form.Internal
    Component.Form.JSArrow
    Component.DashboardFrame
    Component.Frame
    Component.Layout
    Component.PageHeader
    Component.Redirect
    Component.Table
    Design
    Design.Lucid
    Design.Lucid.Card
    Design.Lucid.Layout
    Design.Lucid.Visibility
    Design.Responsive
    Design.StyleBuilder
    Design.StyleBuilder.Internal
    Design.Tokens
    Domain.Types.PostStatus
    Domain.Types.Cookie
    Domain.Types.FileStorage
    Domain.Types.FileUpload
    Domain.Types.Filter
    Domain.Types.Genre
    Domain.Types.HxRequest
    Domain.Types.Limit
    Domain.Types.Offset
    Domain.Types.PageNumber
    Domain.Types.Search
    Domain.Types.Slug
    Domain.Types.UserSortBy
    Domain.Types.WeekOffset
    Effects.Database.Tables.BlogPosts
    Effects.Database.Tables.BlogTags
    Effects.Database.Tables.Episodes
    Effects.Database.Tables.EpisodeTrack
    Effects.Database.Tables.Events
    Effects.Database.Tables.Shows
    Effects.Database.Tables.ShowBlogPosts
    Effects.Database.Tables.ShowBlogTags
    Effects.Database.Tables.ShowHost
    Effects.Database.Tables.ShowSchedule
    Effects.Database.Tables.UserMetadata
    Effects.ContentSanitization
    Effects.FileUpload
    Effects.Markdown
    Effects.MimeTypeValidation
    Helpers.RelativeTime
    Lucid.Extras
    Lucid.Responsive
    Lucid.Styles
    OrphanInstances.DayOfWeek
    OrphanInstances.Rel8
    OrphanInstances.TimeOfDay
    Utils
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -Werror -Wno-missed-extra-shared-lib -fwrite-ide-info

--------------------------------------------------------------------------------

test-suite kpbj-api-test
    import:           common-extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O0
    build-depends:    base >=4.19.2.0
                    , kpbj-api
                    , web-server-core
                    , bytestring
                    , containers
                    , exceptions
                    , data-has
                    , hasql
                    , hasql-interpolate
                    , hasql-pool
                    , hasql-transaction
                    , hedgehog
                    , hs-opentelemetry-api
                    , hs-opentelemetry-sdk
                    , hspec
                    , hspec-api
                    , hspec-core
                    , hspec-discover
                    , hspec-expectations
                    , hspec-hedgehog
                    , HUnit
                    , iproute
                    , log-base
                    , lucid2
                    , mtl
                    , password
                    , postgres-options
                    , string-interpolate
                    , text
                    , time
                    , tmp-postgres
                    , typed-process
                    , unliftio-core
                    , uuid
                    , vector
    other-modules:
       Domain.Types.FileUploadSpec
       Domain.Types.SlugSpec
       Effects.ContentSanitizationSpec
       Effects.MarkdownSpec
       Effects.Database.Tables.BlogPostsSpec
       Effects.Database.Tables.EpisodesSpec
       Effects.Database.Tables.EventsSpec
       Effects.Database.Tables.ShowHostSpec
       Effects.Database.Tables.ShowScheduleSpec
       Effects.Database.Tables.ShowsSpec
       Effects.Database.Tables.UserMetadataSpec
       Effects.Database.Tables.UserRoleSpec
       Effects.MimeTypeValidationSpec
       Test.Database.Expectation
       Test.Database.Monad
       Test.Database.Property
       Test.Database.Property.Assert
       Test.Database.Setup
       Test.Gen.DomainTypes
       Test.Gen.EmailAddress
       Test.Gen.Password
       Test.Gen.Tables.BlogPosts
       Test.Gen.Tables.Episodes
       Test.Gen.Tables.Events
       Test.Gen.Tables.Shows
       Test.Gen.Tables.ShowHost
       Test.Gen.Tables.ShowSchedule
       Test.Gen.Tables.User
       Test.Gen.Tables.UserMetadata
       Test.Gen.Text
       Test.Gen.Time
